--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,5 @@
 <div class="container">
-<form id="send_tweet" action="/tweet" method="post">
-  <input type="text" name="tweet[text]" placeholder="Tweeeeeet!" />
-  <button type="submit">Post Tweet</button>
-</form>
+  <form method="post" action="/authorize_via_twitter">
+    <button name="sign_in_button">Sign in with Twitter</button>
+  </form>
 </div>
