--- a/app/views/tweet.erb
+++ b/app/views/tweet.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<form id="send_tweet" action="/tweet" method="post">
+<form id="send_tweet" action="/tweet/new" method="post">
   <input type="text" name="tweet[text]" placeholder="Tweeeeeet!" />
   <button type="submit">Post Tweet</button>
 </form>
