ajax background call logic

--- a/app/views/tweet.erb
+++ b/app/views/tweet.erb
@@ -3,4 +3,5 @@
   <input type="text" name="tweet[text]" placeholder="Tweeeeeet!" />
   <button type="submit">Post Tweet</button>
 </form>
+<div class="tweet-status"></div>
 </div>
