--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,8 @@
 <div class="container">
-  <form method="post" action="/authorize_via_twitter">
-    <button name="sign_in_button">Sign in with Twitter</button>
-  </form>
+  <div class="signin">
+    <h3>Welcome to Tweeter</h3>
+    <form method="post" action="/authorize_via_twitter">
+      <button name="sign_in_button">Sign in with Twitter</button>
+    </form>
+  </div>
 </div>
